Change the position of the layouts PlayStop buttom now correctly switches

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
 
     <string name="SearchBoxHint">Search Songs</string>
 
+    <string name="songDescription">Song description exaple</string>
+    <string name="emptySoundMessage">No sound are selected</string>
+
 </resources>
